--- a/blog.css
+++ b/blog.css
@@ -1,4 +1,17 @@
 /* Blog Page */
+
+
+/* star shining rain */
+#starfield {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Behind everything */
+  background: transparent;
+}
+
 .blog-page {
   padding: 80px 20px;
   color: white;
